fixed about on portfolio page and also spacing on top of tech news page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,6 +189,10 @@ a:hover {
   padding: 30px;
 }
 
+#tech-news-title {
+  margin: 40px 0px;
+}
+
 .app-card-container {
   color: #343A35;
   text-align: left;
